--- a/task2_25.8.2024/home/home.html
+++ b/task2_25.8.2024/home/home.html
@@ -46,7 +46,9 @@
       </nav>
 
 
-
+      <div>
+       <a class="btn btn-outline-success" href="../category/createCategory.html">Create Category</a>
+      </div>
 
 
       <script src="home.js"></script>
