--- a/task2_25.8.2024/home/home.html
+++ b/task2_25.8.2024/home/home.html
@@ -22,6 +22,9 @@
               <li class="nav-item">
                 <a class="nav-link" onclick="AllProduct()" href="/Product/Product.html">Products</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link"  href="/cart/cart.html">Cart</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
