--- a/task2_25.8.2024/Admin/Addcategory.html
+++ b/task2_25.8.2024/Admin/Addcategory.html
@@ -4,25 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            display: flex;
+        }
 
-    <title>Document</title>
+        .sidebar {
+            min-width: 200px;
+            max-width: 250px;
+            background-color: #f8f9fa;
+            height: 100vh;
+            padding-top: 20px;
+            position: fixed;
+        }
+
+        .content {
+            margin-left: 250px; /* يجب أن يكون بنفس قيمة max-width للـ sidebar */
+            padding: 20px;
+            flex-grow: 1;
+        }
+
+        form {
+            margin-top: 20px;
+            border: 1px solid #ddd;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #f8f9fa;
+        }
+    </style>
+    <title>Add Category</title>
 </head>
 <body>
-    <h2>Add Category</h2>
-    <form id="formdata" style="margin: 200px; border: 1px solid black; padding: 3%;border-radius: 10px;">
-        <div class="mb-3">
-          <label for="CategoryName" class="form-label">Category Name </label>
-          <input type="text" class="form-control" id="CategoryName" name="CategoryName" aria-describedby="CategoryName">
-          
-        </div>
-        <div class="mb-3">
-          <label for="CategoriesImage" class="form-label">Category Image</label>
-          <input type="file" class="form-control" name="CategoriesImage" id="CategoriesImage">
-        </div>
-        
-        <button type="submit" onclick="AddCategory()" class="btn btn-primary">Submit</button>
-      </form>
+    <div class="sidebar">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Products.html">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+    </div>
 
+    <div class="content">
+        <h2>Add Category</h2>
+        <form id="formdata">
+            <div class="mb-3">
+                <label for="CategoryName" class="form-label">Category Name</label>
+                <input type="text" class="form-control" id="CategoryName" name="CategoryName" aria-describedby="CategoryName">
+            </div>
+            <div class="mb-3">
+                <label for="CategoriesImage" class="form-label">Category Image</label>
+                <input type="file" class="form-control" name="CategoriesImage" id="CategoriesImage">
+            </div>
+            <button type="submit" onclick="AddCategory()" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="Addcategory.js"></script>
