--- a/task2_25.8.2024/Admin/Products.html
+++ b/task2_25.8.2024/Admin/Products.html
@@ -3,25 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            display: flex;
+        }
+
+        .sidebar {
+            min-width: 200px;
+            max-width: 250px;
+            background-color: #f8f9fa;
+            height: 100vh;
+            padding-top: 20px;
+            position: fixed;
+        }
+
+        .content {
+            margin-left: 250px; /* يجب أن يكون هذا بنفس قيمة max-width للـ sidebar */
+            padding: 20px;
+            flex-grow: 1;
+        }
+
+        table {
+            margin-top: 20px;
+        }
+
+        th, td {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .table-hover tbody tr:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
+    <div class="sidebar">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="Admin.html">Categories</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="Products.html">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+    </div>
 
-    <div>
+    <div class="content">
         <h1>Products</h1>
-        <a href="Addproduct.html">Add Product</a>
-        <table id="tableproduct">
-            <tr>
-                <th>Product ID</th>
-                <th>Product Name</th>
-                <th>Product Image</th>
-                <th>Product Price</th>
-                <th>Action</th>
-            </tr>
+        <a href="Addproduct.html" class="btn btn-primary mb-3">Add Product</a>
+        <table id="tableproduct" class="table table-bordered table-striped table-hover">
+            <thead class="table-dark">
+                <tr>
+                    <th>Product ID</th>
+                    <th>Product Name</th>
+                    <th>Product Image</th>
+                    <th>Product Price</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
                 
+            </tbody>
         </table>
-        
-      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="Products.js"></script>
 </body>
 </html>
